# Mangalib_Downloader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Combiner.h  Converter.cpp  Converter.h  DarkTheme.cpp  DarkTheme.h  Downloader.cpp  Downloader.h  Error.h  Gui.cpp  Gui.h  HtmlCombiner.cpp  HtmlCombiner.h  MangaSearcher.cpp  MangaSearcher.h  MangalibAuthorizer.cpp  MangalibAuthorizer.h  RawCombiner.cpp  RawCombiner.h  UriParser.h  main.cpp
BinaryFonts/: fa_solid.h  source_sans.h
Windows/: downloader.rc
template/: index.html
